--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "cordis": {
-        "id": "projectID",
-        "raw_text": "summary",
+        "id": "id",
+        "raw_text": "objective",
         "title": "title",
         "//": "Depending on the source 'id' is 'projectID' and 'objective' is 'summary'"
     },
