--- a/requirements.txt
+++ b/requirements.txt
@@ -1,136 +1,9 @@
-annotated-types==0.7.0
-anyascii==0.3.2
-asttokens==3.0.0
-attrs==25.1.0
-backcall==0.2.0
-beautifulsoup4==4.13.3
-bleach==6.2.0
-blis==1.2.0
-catalogue==2.0.10
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-cloudpathlib==0.20.0
-cloudpickle==3.1.1
-confection==0.1.5
 contractions==0.1.73
-cymem==2.0.11
-dask==2025.2.0
-decorator==5.2.1
-defusedxml==0.7.1
-docopt==0.6.2
-#en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-executing==2.2.0
-fastjsonschema==2.21.1
-filelock==3.17.0
-fsspec==2025.2.0
+dask==2025.7.0
 gensim==4.3.3
-huggingface-hub==0.29.1
-idna==3.10
-ipython==8.12.3
-jedi==0.19.2
-Jinja2==3.1.5
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
-langcodes==3.5.0
 langdetect==1.0.9
-language_data==1.3.0
-locket==1.0.0
-marisa-trie==1.2.1
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mistune==3.1.2
-mpmath==1.3.0
-murmurhash==1.0.12
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-networkx==3.4.2
-numpy==1.26.4
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-cusparselt-cu12==0.6.2
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
-packaging==24.2
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-partd==1.4.2
-pexpect==4.9.0
-pickleshare==0.7.5
-pillow==11.1.0
-pipreqs==0.5.0
-platformdirs==4.3.6
-preshed==3.0.9
-prompt_toolkit==3.0.50
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyahocorasick==2.1.0
-pyarrow==19.0.1
-pydantic==2.10.6
-pydantic_core==2.27.2
-pyfiglet==1.0.2
-Pygments==2.19.1
-python-dateutil==2.9.0.post0
-pytz==2025.1
-PyYAML==6.0.2
-pyzmq==26.2.1
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-rich==13.9.4
-rpds-py==0.23.1
-safetensors==0.5.3
-scikit-learn==1.6.1
-scipy==1.13.1
-sentence-transformers==3.4.1
-setuptools==75.8.2
-shellingham==1.5.4
-six==1.17.0
-smart-open==7.1.0
-soupsieve==2.6
-spacy==3.8.4
-spacy-download==1.1.0
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.5.1
-stack-data==0.6.3
-sympy==1.13.1
-termcolor==2.5.0
-textsearch==0.0.24
-thinc==8.3.4
-threadpoolctl==3.5.0
-tinycss2==1.4.0
-tokenizers==0.21.0
-toolz==1.0.0
-torch==2.6.0
-tornado==6.4.2
+numpy
+pandas==2.3.2
+sentence_transformers==5.1.0
+spacy_download==1.1.0
 tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.49.0
-triton==3.2.0
-typer==0.15.2
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==2.3.0
-wasabi==1.1.3
-wcwidth==0.2.13
-weasel==0.4.1
-webencodings==0.5.1
-wrapt==1.17.2
-yarg==0.1.9
