--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "sentence-transformers==5.1.0",
     "spacy-download==1.1.0",
     "tqdm==4.67.1",
+    "pyfiglet==1.0.4",
+    "termcolor==2.3.0"
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
